# safe-bytecount

./: README.md  atspkg.dhall  pkg.dhall
DATS/: bytecount.dats  export.dats  io.dats  memchr.dats  wc.dats
bench/: memchr-bench.dats
bytecount/: Cargo.toml
bytecount/benches/: bytecount_bench.rs
