[package]
name = "bytecount_bench"
version = "0.1.0"
authors = ["Vanessa McHale <vamchale@gmail.com>"]

[dev-dependencies]
criterion = "0.3"

[dependencies.bytecount]
features = ["runtime-dispatch-simd"]
version = "0.6"

[[bench]]
name = "bytecount_bench"
harness = false

[profile.release]
lto = true
panic = "abort"
